--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ if((NOT ${HAL_VERSION_MAJOR}) AND ((NOT ${HAL_VERSION_MINOR}) AND (NOT ${HAL_VER
 else()
     set(HAL_VERSION_RETURN ${HAL_VERSION_MAJOR}.${HAL_VERSION_MINOR}.${HAL_VERSION_PATCH})
 endif()
-#configure_file(${CMAKE_SOURCE_DIR}/include/hal_version.h.in ${CMAKE_SOURCE_DIR}/include/hal_version.h @ONLY)
+configure_file(${CMAKE_SOURCE_DIR}/CURRENT_VERSION.in ${CMAKE_SOURCE_DIR}/CURRENT_VERSION @ONLY)
 unset(HAL_VERSION_MAJOR_SELF CACHE)
 message(STATUS "HAL_VERSION: ${HAL_VERSION_RETURN}")
 
