--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -130,7 +130,7 @@ jobs:
           HAL_BASE_PATH: ${{runner.workspace}}/build
 
       - name: Publish New Homebrew Version
-        if: startsWith(runner.os, 'macOS') && github.event_name == 'create' && startsWith(github.ref, 'refs/tags/v')
+        if: startsWith(runner.os, 'macOS') && startsWith(github.ref, 'refs/tags/v')
 #        if: startsWith(runner.os, 'macOS')
         run: |
           export CI_COMMIT_TAG=$(git describe --abbrev=0 --tags)
