--- a/documentation/sphinx_doc/conf.py.in
+++ b/documentation/sphinx_doc/conf.py.in
@@ -104,7 +104,7 @@ html_theme = 'sphinx_rtd_theme'
 # Add any paths that contain custom static files (such as style sheets) here,
 # relative to this directory. They are copied after the builtin static files,
 # so a file named "default.css" will overwrite the builtin "default.css".
-html_static_path = ['@CMAKE_CURRENT_SOURCE_DIR@/documentation/sphinx_doc/static']
+html_static_path = ['@CMAKE_CURRENT_SOURCE_DIR@/sphinx_doc/static']
 
 # -- Options for HTMLHelp output ------------------------------------------
 
