Just link private to boost in core

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -57,6 +57,7 @@ target_link_libraries(core
                         spdlog::spdlog
                         ${CMAKE_DL_LIBS}
                         RapidJSON::RapidJSON
+                      PRIVATE
                         Boost::system
                       )
 install(TARGETS core
