--- a/plugins/graph_algorithm/CMakeLists.txt
+++ b/plugins/graph_algorithm/CMakeLists.txt
@@ -9,13 +9,13 @@ if(PL_GRAPH_ALGORITHM OR BUILD_ALL_PLUGINS)
     endif(HAVE_IGRAPH)
 
     file(GLOB_RECURSE GRAPH_ALGORITHM_INC ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
-    file(GLOB_RECURSE GRAPH_ALGORITHM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
-    file(GLOB_RECURSE PYTHON_BINDING_LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/python/python_definitions.cpp)
+    file(GLOB_RECURSE GRAPH_ALGORITHM_source ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
+    file(GLOB_RECURSE PYTHON_BINDING_LIB_source ${CMAKE_CURRENT_SOURCE_DIR}/python/python_definitions.cpp)
 
     hal_add_plugin(graph_algorithm
                    SHARED
                    HEADER ${GRAPH_ALGORITHM_INC}
-                   SOURCES ${GRAPH_ALGORITHM_SRC} ${PYTHON_BINDING_LIB_SRC}
+                   SOURCES ${GRAPH_ALGORITHM_source} ${PYTHON_BINDING_LIB_source}
                    INCLUDES PUBLIC $<BUILD_INTERFACE:${IGRAPH_INCLUDES}>
                    DEFINITIONS PUBLIC -DIGRAPH_VERSION_MAJOR_GUESS=${IGRAPH_VERSION_MAJOR_GUESS} -DIGRAPH_VERSION_MINOR_GUESS=${IGRAPH_VERSION_MINOR_GUESS} -DIGRAPH_VERSION_PATCH_GUESS=${IGRAPH_VERSION_PATCH_GUESS}
                    LINK_LIBRARIES PUBLIC ${IGRAPH_LIBRARIES}
