Github Action Release change working-directory

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,7 +62,7 @@ jobs:
         # Use a bash shell so we can use the same syntax for environment variable
         # access regardless of the host operating system
         shell: bash
-        working-directory: ${{runner.workspace}}/build
+        working-directory: ${{runner.workspace}}/hal/build
         # Note the current convention is to use the -S and -B options here to specify source
         # and build directories, but this is only available with CMake 3.13 and higher.
         # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
@@ -73,24 +73,24 @@ jobs:
           git describe
           cmake -G Ninja $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_ALL_PLUGINS=ON -DBUILD_TESTS=ON -DBUILD_COVERAGE=ON -DWITH_GUI=ON -DBUILD_DOCUMENTATION=ON -DPACKAGE_DEB=OFF -DCMAKE_INSTALL_PREFIX=/usr/
         env:
-          HAL_BASE_PATH: ${{runner.workspace}}/build
+          HAL_BASE_PATH: ${{runner.workspace}}/hal/build
 
       - name: Build Doxygen
         if: startsWith(runner.os, 'Linux')
-        working-directory: ${{runner.workspace}}/build
+        working-directory: ${{runner.workspace}}/hal/build
         shell: bash
         # Execute the build.  You can specify a specific target with "--target <NAME>"
         run: |
           cmake --build . --target doc --clean-first --config $BUILD_TYPE
         env:
-          HAL_BASE_PATH: ${{runner.workspace}}/build
+          HAL_BASE_PATH: ${{runner.workspace}}/hal/build
 
       - name: Build Sphinx
         if: startsWith(runner.os, 'Linux')
-        working-directory: ${{runner.workspace}}/build
+        working-directory: ${{runner.workspace}}/hal/build
         shell: bash
         # Execute the build.  You can specify a specific target with "--target <NAME>"
         run: |
           cmake --build . --target hal_py_docs --clean-first --config $BUILD_TYPE
         env:
-          HAL_BASE_PATH: ${{runner.workspace}}/build
+          HAL_BASE_PATH: ${{runner.workspace}}/hal/build
