Added doc deploy instructions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,3 +96,25 @@ jobs:
           cmake --build . --target hal_py_docs --clean-first --config $BUILD_TYPE
         env:
           HAL_BASE_PATH: ${{runner.workspace}}/build
+
+
+
+      - name: Deploy Doxygen
+          working-directory: ${{runner.workspace}}/build
+          uses: peaceiris/actions-gh-pages@v3
+          with:
+            external_repository: emsec/hal-doc
+            github_token: ${{ secrets.GH_PAGES_KEY }}
+            publish_dir: ./documentation/documentation/
+            publish_branch: master  # deploying branch
+            enable_jekyll: false
+
+      - name: Deploy Sphinx
+          working-directory: ${{runner.workspace}}/build
+          uses: peaceiris/actions-gh-pages@v3
+          with:
+            external_repository: emsec/hal-pydoc
+            github_token: ${{ secrets.GH_PAGES_PY_KEY }}
+            publish_dir: ./python-doc/
+            publish_branch: master  # deploying branch
+            enable_jekyll: false
