--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,7 +103,7 @@ jobs:
         with:
           external_repository: emsec/hal-pydoc
           deploy_key: ${{ secrets.GH_PAGES_PY_KEY }}
-          publish_dir: ${{runner.workspace}}/build/python-doc/
+          publish_dir: ${{runner.workspace}}/build/python-doc
           publish_branch: master  # deploying branch
           enable_jekyll: false
           user_name: 'github-actions[bot]'
@@ -116,7 +116,7 @@ jobs:
         with:
           external_repository: emsec/hal-doc
           deploy_key: ${{ secrets.GH_PAGES_KEY }}
-          publish_dir: ${{runner.workspace}}/build/documentation/documentation/
+          publish_dir: ${{runner.workspace}}/build/documentation/documentation
           publish_branch: master  # deploying branch
           enable_jekyll: false
           user_name: 'github-actions[bot]'
