--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,12 +103,13 @@ jobs:
         with:
           external_repository: emsec/hal-pydoc
           deploy_key: ${{ secrets.GH_PAGES_PY_KEY }}
-          publish_dir: ${{runner.workspace}}/build/python-doc
+          publish_dir: python-doc
           publish_branch: master  # deploying branch
           enable_jekyll: false
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
           force_orphan: true
+        working-directory: ${{runner.workspace}}/build
 
 
       - name: Deploy Doxygen
@@ -116,11 +117,12 @@ jobs:
         with:
           external_repository: emsec/hal-doc
           deploy_key: ${{ secrets.GH_PAGES_KEY }}
-          publish_dir: ${{runner.workspace}}/build/documentation/documentation
+          publish_dir: documentation/documentation
           publish_branch: master  # deploying branch
           enable_jekyll: false
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
           force_orphan: true
+        working-directory: ${{runner.workspace}}/build
 
 
