--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,7 +67,7 @@ jobs:
         # Use a bash shell so we can use the same syntax for environment variable
         # access regardless of the host operating system
         shell: bash
-        working-directory: ${{runner.workspace}}/build
+        working-directory: ${{runner.workspace}}/hal/build
         # Note the current convention is to use the -S and -B options here to specify source
         # and build directories, but this is only available with CMake 3.13 and higher.
         # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
@@ -77,27 +77,27 @@ jobs:
           $GITHUB_WORKSPACE/tools/genversion.py $GITHUB_WORKSPACE
           cmake -G Ninja $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_ALL_PLUGINS=ON -DBUILD_TESTS=ON -DBUILD_COVERAGE=ON -DWITH_GUI=ON -DBUILD_DOCUMENTATION=ON -DPACKAGE_DEB=OFF -DCMAKE_INSTALL_PREFIX=/usr/
         env:
-          HAL_BASE_PATH: ${{runner.workspace}}/build
+          HAL_BASE_PATH: ${{runner.workspace}}/hal/build
 
       - name: Build Doxygen
         if: startsWith(runner.os, 'Linux')
-        working-directory: ${{runner.workspace}}/build
+        working-directory: ${{runner.workspace}}/hal/build
         shell: bash
         # Execute the build.  You can specify a specific target with "--target <NAME>"
         run: |
           cmake --build . --target doc --clean-first --config $BUILD_TYPE
         env:
-          HAL_BASE_PATH: ${{runner.workspace}}/build
+          HAL_BASE_PATH: ${{runner.workspace}}/hal/build
 
       - name: Build Sphinx
         if: startsWith(runner.os, 'Linux')
-        working-directory: ${{runner.workspace}}/build
+        working-directory: ${{runner.workspace}}/hal/build
         shell: bash
         # Execute the build.  You can specify a specific target with "--target <NAME>"
         run: |
           cmake --build . --target hal_py_docs --clean-first --config $BUILD_TYPE
         env:
-          HAL_BASE_PATH: ${{runner.workspace}}/build
+          HAL_BASE_PATH: ${{runner.workspace}}/hal/build
 
 
       - name: Deploy Sphinx
@@ -105,7 +105,7 @@ jobs:
         with:
           external_repository: emsec/hal-pydoc
           deploy_key: ${{ secrets.GH_PAGES_PY_KEY }}
-          publish_dir: ../build/python-doc
+          publish_dir: build/python-doc
           publish_branch: master  # deploying branch
           enable_jekyll: false
           user_name: 'github-actions[bot]'
@@ -118,7 +118,7 @@ jobs:
         with:
           external_repository: emsec/hal-doc
           deploy_key: ${{ secrets.GH_PAGES_KEY }}
-          publish_dir: ../build/documentation/documentation
+          publish_dir: build/documentation/documentation
           publish_branch: master  # deploying branch
           enable_jekyll: false
           user_name: 'github-actions[bot]'
