--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,11 +67,12 @@ jobs:
         # Use a bash shell so we can use the same syntax for environment variable
         # access regardless of the host operating system
         shell: bash
-        working-directory: ${{runner.workspace}}/hal/build
         # Note the current convention is to use the -S and -B options here to specify source
         # and build directories, but this is only available with CMake 3.13 and higher.
         # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
         run: |
+          mkdir -p build
+          cd build
           pwd
           ls $GITHUB_WORKSPACE
           $GITHUB_WORKSPACE/tools/genversion.py $GITHUB_WORKSPACE
@@ -81,20 +82,20 @@ jobs:
 
       - name: Build Doxygen
         if: startsWith(runner.os, 'Linux')
-        working-directory: ${{runner.workspace}}/hal/build
         shell: bash
         # Execute the build.  You can specify a specific target with "--target <NAME>"
         run: |
+          cd build
           cmake --build . --target doc --clean-first --config $BUILD_TYPE
         env:
           HAL_BASE_PATH: ${{runner.workspace}}/hal/build
 
       - name: Build Sphinx
         if: startsWith(runner.os, 'Linux')
-        working-directory: ${{runner.workspace}}/hal/build
         shell: bash
         # Execute the build.  You can specify a specific target with "--target <NAME>"
         run: |
+          cd build
           cmake --build . --target hal_py_docs --clean-first --config $BUILD_TYPE
         env:
           HAL_BASE_PATH: ${{runner.workspace}}/hal/build
