--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -89,50 +89,52 @@ jobs:
         # Use a bash shell so we can use the same syntax for environment variable
         # access regardless of the host operating system
         shell: bash
-        working-directory: ${{runner.workspace}}/build
         # Note the current convention is to use the -S and -B options here to specify source
         # and build directories, but this is only available with CMake 3.13 and higher.
         # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
         run: |
+          mkdir -p build
+          cd build
           export PATH="/usr/local/opt/qt/bin:$PATH"
           ls ..
           cmake -G Ninja $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_BUILD_TYPE=Debug -DBUILD_ALL_PLUGINS=ON -DBUILD_TESTS=ON -DBUILD_COVERAGE=ON -DWITH_GUI=ON -DBUILD_DOCUMENTATION=ON -DCMAKE_INSTALL_PREFIX=/usr/ -DPACKAGE_MACOS=ON -DCMAKE_C_COMPILER=/usr/local/opt/llvm/bin/clang -DCMAKE_CXX_COMPILER=/usr/local/opt/llvm/bin/clang++
         env:
           LDFLAGS: "-L/usr/local/opt/qt/lib -L/usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib"
           CPPFLAGS: "-I/usr/local/opt/qt/include -I/usr/local/opt/llvm/include"
-          HAL_BASE_PATH: ${{runner.workspace}}/build
+          HAL_BASE_PATH: ${{runner.workspace}}/hal/build
 
       - name: Build
         if: startsWith(runner.os, 'macOS')
-        working-directory: ${{runner.workspace}}/build
         shell: bash
         # Execute the build.  You can specify a specific target with "--target <NAME>"
         run: |
+          cd build
           export PATH="/usr/local/opt/qt/bin:$PATH"
           cmake --build . --target all --clean-first --config $BUILD_TYPE
         env:
           LDFLAGS: "-L/usr/local/opt/qt/lib -L/usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib"
           CPPFLAGS: "-I/usr/local/opt/qt/include -I/usr/local/opt/llvm/include"
-          HAL_BASE_PATH: ${{runner.workspace}}/build
+          HAL_BASE_PATH: ${{runner.workspace}}/hal/build
 
 
       - name: Test
-        working-directory: ${{runner.workspace}}/build
         shell: bash
         # Execute tests defined by the CMake configuration.
         # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
         run: |
+          cd build
           ninja hal_coverage
           bash <(curl -s https://codecov.io/bash) -f hal_coverage.info.cleaned || echo "Codecov did not collect coverage reports"
         env:
           LDFLAGS: "-L/usr/local/opt/qt/lib -L/usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib"
           CPPFLAGS: "-I/usr/local/opt/qt/include -I/usr/local/opt/llvm/include"
-          HAL_BASE_PATH: ${{runner.workspace}}/build
+          HAL_BASE_PATH: ${{runner.workspace}}/hal/build
 
       - name: Publish New Homebrew Version
         if: startsWith(runner.os, 'macOS') && startsWith(github.ref, 'refs/tags/v')
 #        if: startsWith(runner.os, 'macOS')
         run: |
+          cd build
           export CI_COMMIT_TAG=$(git describe --abbrev=0 --tags)
           export CI_COMMIT_SHA=$(git rev-parse --verify HEAD)
           mkdir -p ~/.ssh
