--- a/documentation/sphinx_doc/conf.py.in
+++ b/documentation/sphinx_doc/conf.py.in
@@ -21,7 +21,7 @@ import os
 import sys
 
 sys.path.insert(0, os.path.abspath('@CMAKE_CURRENT_BINARY_DIR@/lib'))
-# sys.path.insert(0, os.path.relpath('@CMAKE_CURRENT_BINARY_DIR@/lib', os.getcwd()))
+sys.path.insert(0, os.path.abspath('@CMAKE_BINARY_DIR@/lib'))
 
 # -- General configuration ------------------------------------------------
 
