Added debug output for macOS test coverage

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -124,6 +124,7 @@ jobs:
         run: |
           cd build
           ninja hal_coverage
+          ls -lah
           bash <(curl -s https://codecov.io/bash) -f hal_coverage.info.cleaned || echo "Codecov did not collect coverage reports"
         env:
           LDFLAGS: "-L/usr/local/opt/qt/lib -L/usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib"
